--- a/_posts/2020-11-10-Income.md
+++ b/_posts/2020-11-10-Income.md
@@ -35,535 +35,21 @@ Scegliendo l'accuracy come misura per la selezione del miglior algoritmo il clas
 
 
 
-### Analisi esplorative  {.tabset}
+### Analisi esplorative
 
-Di seguito vengono riportate le analisi esplorative effettuate su tutte le variabili del dataset condizionate alla risposta.
-Nella prima sezione vengono considerate solo relazioni semplici tra un'esplicativa e la risposta, nella seconda invece si vuole evidenziare gli effetti congiunti tra le variabili.
-
-
-#### Statistiche univariate {.tabset}
-
-##### et?
+##### età
 
 
 Il grafico evidenzia che l'et? media di soggetti pi? poveri sia inferiore all'et? media dei soggetti pi? ricchi: la differenza  tra le due distibuzioni e circa di 10 anni.
 I motivi potrebbero dipendere dalla conclusione degli studi e passaggio al mondo del lavoro, Promozioni, scatti di anzianit? o ancora al cambio di lavoro a favore di una proposta migliore.
 
 
-```{r , echo=FALSE, warning=FALSE,fig.width=10,fig.height=6}
+```r
 a=ggplot(clean_income) + aes(x=as.numeric(age), group=salario, fill=salario) +
   labs(x = "Et?",y="Numerosit?")+labs(title = "Istogramma delle et? condizionata al salario")+
   geom_histogram(binwidth=2,color='black')+
   scale_fill_brewer(palette = "Set1")+
   theme_replace()
 a
-
-
 #multiplot(a,b,cols = 2)
-
 ```
-
-##### ore lavorate
-
-Dal grafico ? possibile notare che circa la met? dei soggetti lavora tra le 29- 43 ore settimanali.
-Contrariamente a quanto ci si sarebbe potuto aspettare, vi ? solo una leggera associazione positiva tra redditi superiori a 50k$ ed ore lavorate.
-
-
-```{r , echo=FALSE, warning=FALSE,fig.width=10,fig.height=6}
-hours_discretizzata=(discretize(clean_income$hours.per.week, breaks = 7,method = 'interval'))
-clean_income=cbind(clean_income,hours_discretizzata)
-
-# create a dataframe
-df1 <- data.frame(table(clean_income$salario, clean_income$hours_discretizzata))
-names(df1) <- c('income', 'ore.settimanali', 'count')
-
-
-#levels(as.factor(clean_income$education))
-# calculate the percentages
-df1 <- ddply(df1, .(ore.settimanali), transform, percent = count/sum(count) * 100)
-
-# format the labels and calculate their positions
-df1 <- ddply(df1, .(ore.settimanali), transform, pos = (cumsum(count) - 0.5 * count))
-df1$label <- paste0(sprintf("%.0f", df1$percent), "%")
-
-# remove some in group percentage to avoid overlapped text
-#df1$label[which(df1$percent < 5)] <- NA
-df1$income<-relevel(df1$income, " >50K")
-# bar plot of counts by years of education with in group proportions
-ggplot(df1, aes(x = ore.settimanali, y = count, fill = income)) +
-  geom_bar(stat = "identity") +
-  geom_text(aes(y = pos, label = label), size = 3) +
-  labs(x = "Ore settimanali ",y="Numerosit?")+
-  ggtitle('Livello del salario per ore lavorate')+
-  scale_fill_brewer(palette = "Set1")+
-  theme_replace()
-
-#histogram(~clean_income$hours.per.week|clean_income$salario,breaks = 30)
-
-
-```
-
-
-##### capital_gain & capital loss
-
-
-Le due distribuzioni sono fortemente sbilanciate, presentano moda e mediana in zero,di conseguenza risultano poco informative per il nostro problema.
-
-```{r , echo=FALSE, warning=FALSE}
-histogram(~clean_income$capital.gain|clean_income$salario,xlab = "",main="Distribuzione  capital gain")
-histogram(~clean_income$capital.los|clean_income$salario,xlab = "",main="Distribuzione capital loss")
-
-```
-
-
-
-##### education
-
-
-Come ci si poteva immaginare l'educazione ripaga in termini di reddito percepito. In media la popolazione termina il proprio percorso di studi con il diploma, mentre soggetti che continuano gli studi registrano aumenti di reddito.
-Ad esempio, per persone non diplomate, la percentuale di soggetti con reddito superiore 50k ? solo del 7% , al contrario, per soggetti con un dottorato si attesta al 73%.
-
-
-```{r , echo=FALSE, warning=FALSE,fig.width=12,fig.height=8}
-# create a dataframe
-df1 <- data.frame(table(clean_income$salario, clean_income$education))
-names(df1) <- c('income', 'education_num', 'count')
-
-
-#levels(as.factor(clean_income$education))
-# calculate the percentages
-df1 <- ddply(df1, .(education_num), transform, percent = count/sum(count) * 100)
-
-# format the labels and calculate their positions
-df1 <- ddply(df1, .(education_num), transform, pos = (cumsum(count) - 0.5 * count))
-df1$label <- paste0(sprintf("%.0f", df1$percent), "%")
-
-# remove some in group percentage to avoid overlapped text
-df1$label[which(df1$percent < 5)] <- NA
-df1$income<-relevel(df1$income, " >50K")
-# bar plot of counts by years of education with in group proportions
-ggplot(df1, aes(x = education_num, y = count, fill = income)) +
-  geom_bar(stat = "identity") +
-  geom_text(aes(y = pos, label = label), size = 3) +
-  ggtitle('Livello del salario per titolo di studio posseduto')+
-  labs(x='Titolo di studi',y='Numerosit?')+
-  scale_fill_brewer(palette = "Set1")+
-  theme_replace()
-
-```
-
-
-##### worcklass
-
-
-Il settore nel quale un individuo ? occupato, senza considerare la mansione svolta, risulta essere un informazione non molto rilevante. La maggior parte delle persone lavorano in settori privati e solo i liberi professionisti risultano avere percentuale del 55% per redditi alti.
-
-```{r , echo=FALSE, warning=FALSE,fig.width=12,fig.height=8}
-# create a dataframe
-df1 <- data.frame(table(clean_income$salario, clean_income$workclass))
-names(df1) <- c('income', 'workclass_num', 'count')
-
-
-#levels(as.factor(clean_income$workclass))
-# calculate the percentages
-df1 <- ddply(df1, .(workclass_num), transform, percent = count/sum(count) * 100)
-
-# format the labels and calculate their positions
-df1 <- ddply(df1, .(workclass_num), transform, pos = (cumsum(count) - 0.5 * count))
-df1$label <- paste0(sprintf("%.0f", df1$percent), "%")
-
-# remove some in group percentage to avoid overlapped text
-df1$label[which(df1$percent < 5)] <- NA
-df1$income<-relevel(df1$income, " >50K")
-# bar plot of counts by years of workclass with in group proportions
-ggplot(df1, aes(x = workclass_num, y = count, fill = income)) +
-  geom_bar(stat = "identity") +
-  geom_text(aes(y = pos, label = label), size = 3) +
-  ggtitle('Livello del salario per settore lavorativo')+
-  labs(x="Settore lavorativo",y="Numerosit?")+
-  scale_fill_brewer(palette = "Set1")+
-  theme_replace()
-
-```
-
-##### stato coniugale e relathionship
-
-
-L'impatto dello stato coniugale sul reddito ? rilevante.
-Sembra che per un non sposato sia molto meno probabile di uno sposato raggiungere un certo livello di reddito.Probabilmente soggetti con redditi pi? elevati hanno possibilit? economica maggiori e per questo una propensione pi? alta a mettere su famiglia.
-
-
-```{r , echo=FALSE, warning=FALSE,fig.width=12,fig.height=8}
-df2 <- data.frame(table(clean_income$salario, clean_income$relationship))
-names(df2) <- c('income', 'relationship', 'count')
-
-# calculate the percentages
-df2 <- ddply(df2, .(relationship), transform, percent = count/sum(count) * 100)
-# format the labels and calculate their positions
-df2 <- ddply(df2, .(relationship), transform, pos = (cumsum(count) - 0.5 * count))
-df2$label <- paste0(sprintf("%.0f", df2$percent), "%")
-# remove some in group percentage to avoid overlapped text
-#df2$label[which(df2$percent < 5)] <- NA
-df2$income<-relevel(df2$income, " >50K")
-# bar plot of counts by years of education with in group proportions
-ggplot(df2, aes(x = relationship, y = count, fill = income)) +
-  geom_bar(stat = "identity") +
-  geom_text(aes(y = pos, label = label), size = 3) +
-  ggtitle('Livello del salario per stato coniugale')+
-  labs(x='Stato coniugale',y='Numerosit?')+
-  scale_fill_brewer(palette = "Set1")+
-  theme_replace()
-
-
-```
-
-
-
-
-
-##### race
-
-Gli individui censiti nel dataset sono per lo pi? di razza bianca e si nota che la variabile considerata non discrimina sulla fascia di reddito.
-L'unico livello che presenta una certa differenza tra gli altri ? quello dei neri, che superano con difficolt? i 50$K.
-
-
-```{r , echo=FALSE, warning=FALSE,fig.width=12,fig.height=8}
-clean_income$race<-as.factor(clean_income$race)
-df3 <- data.frame(table(clean_income$salario, clean_income$race))
-names(df3) <- c('income', 'race', 'count')
-
-
-# calculate the percentages
-df3 <- ddply(df3, .(race), transform, percent = count/sum(count) * 100)
-# format the labels and calculate their positions
-df3 <- ddply(df3, .(race), transform, pos = (cumsum(count) - 0.5 * count))
-df3$label <- paste0(sprintf("%.0f", df3$percent), "%")
-
-df3$income<-relevel(df3$income, " >50K")
-# bar plot of counts by years of education with in group proportions
-ggplot(df3, aes(x = race, y = count, fill = income)) +
-  geom_bar(stat = "identity") +
-  geom_text(aes(y = pos+0.5, label = label), size = 3.5) +
-  ggtitle('Livello del salario per tipologia razza')+
-  labs(x='Razza',y='Numerosit?')+
-  scale_fill_brewer(palette = "Set1")+
-  theme_replace()
-
-```
-
-
-##### genere
-
-Vi ? distinzione per quanto riguarda il  reddito nelle due classi della variabile "Sex":
-la percentuale di uomini che guadagnano pi? di 50 Mila Dollari ? intorno al 30% contro quella delle donne che si attesta al 10%.
-
-
-```{r , echo=FALSE, warning=FALSE,fig.width=4,fig.height=6}
-clean_income$sex<-as.factor(clean_income$sex)
-df3 <- data.frame(table(clean_income$salario, clean_income$sex))
-names(df3) <- c('income', 'sex', 'count')
-
-
-# calculate the percentages
-df3 <- ddply(df3, .(sex), transform, percent = count/sum(count) * 100)
-# format the labels and calculate their positions
-df3 <- ddply(df3, .(sex), transform, pos = (cumsum(count) - 0.5 * count))
-df3$label <- paste0(sprintf("%.0f", df3$percent), "%")
-
-df3$income<-relevel(df3$income, " >50K")
-# bar plot of counts by years of education with in group proportions
-ggplot(df3, aes(x = sex, y = count, fill = income)) +
-  geom_bar(stat = "identity") +
-  geom_text(aes(y = pos+0.5, label = label), size = 3.5) +
-  ggtitle('Livello del salario per genere')+
-  scale_fill_brewer(palette = "Set1")+
-  theme_replace()
-
-```
-
-##### paese d'origine
-
-Pi? del 90% della popolazione ? originaria degli stati Uniti.
-La numerosit? nelle altre modalit? della variabile non ? sufficente per esprimere giudizi dell'effetto  del paese d'orgine sul livello di reddito.
-
-```{r , echo=FALSE, warning=FALSE,fig.width=12,fig.height=8}
-clean_income$native.country<-as.factor(clean_income$native.country)
-df3 <- data.frame(table(clean_income$salario, clean_income$native.country))
-names(df3) <- c('income', 'native.country', 'count')
-
-
-# calculate the percentages
-df3 <- ddply(df3, .(native.country), transform, percent = round(count/sum(count) * 100,2))
-# format the labels and calculate their positions
-df3 <- ddply(df3, .(native.country), transform, pos = (cumsum(count) - 0.5 * count))
-datatable(df3[,c(1,2,3,4 )], options = list(pageLength = 5))
-
-```
-
-
-
-##### occupazione
-
-
-Sembrerebbe esserci un'eterogeneit? delle occupazioni nella popolazione, cio? non vi sono occupazioni prevalenti rispetto ad altre. Notiamo che le professioni pi? redditizzie  sono quelle nelle quali sono richieste competenze specifiche (Manager, Prof-speciality).
-
-```{r , echo=FALSE, warning=FALSE,fig.width=12,fig.height=8}
-clean_income$occupation<-as.factor(clean_income$occupation)
-df3 <- data.frame(table(clean_income$salario, clean_income$occupation))
-names(df3) <- c('income', 'occupation', 'count')
-
-# calculate the percentages
-df3 <- ddply(df3, .(occupation), transform, percent = count/sum(count) * 100)
-# format the labels and calculate their positions
-df3 <- ddply(df3, .(occupation), transform, pos = (cumsum(count) - 0.5 * count))
-df3$label <- paste0(sprintf("%.0f", df3$percent), "%")
-
-df3$income<-relevel(df3$income, " >50K")
-# bar plot of counts by years of education with in group proportions
-a<-ggplot(df3, aes(x = occupation, y = count, fill = income)) +
-  geom_bar(stat = "identity") +
-  labs(x="Occupazione",y="Numerosit?")+
-  geom_text(aes(y = pos+0.5, label = label), size = 3) +
-  ggtitle('Livello del salario per occupazione')+
-  scale_fill_brewer(palette = "Set1")+
-  theme_replace()
-
-a+theme(axis.text.x = element_text(angle = 90))
-
-```
-
-
-
-
-#### Statistiche multivariate {.tabset}
-
-Queste analisi sono state svolte per  raggiungere una pi? profonda comprensione delle dinamiche
-che influiscono sul livello del reddito degli individui.
-
-I grafici seguenti mostrano come variano le percentuali di individui il cui livello di reddito ? inferiore ai 50$K annui considerando  pi? variabili congiuntamente.
-
-##### Sezione 1
-
-
-###### OccupationVSeducation
-
-Dalle analisi precedenti sappiamo che vi sono occupazioni mediamente molto pi? redditizie di altre e che al crescere dell'istruzione anche il livello medio del reddito aumenta.
-Abbiamo osservato l'effetto congiunto di queste due variabili:
-
-```{r , echo=FALSE, warning=FALSE,fig.width=12,fig.height=8}
-tab3=prop.table(table(clean_income$salario,clean_income$education,clean_income$occupation,useNA = 'no'), margin=2)
-tab_transitorio=matrix(tab3,ncol = 2,byrow = T)
-freq=tab_transitorio[,1]/(tab_transitorio[,1]+tab_transitorio[,2])
-tab3=data.frame(tab3)
-tab3=tab3[-(which(tab3$Var1==' >50K')),]
-tab3$Freq=freq
-colnames(tab3)=c('salario','education','occupation','%')
-#a=proc.time()
-ggplot(tab3, aes(y=freq, x=education, fill=education),color=education) +
-  ggtitle('Distribuzione salario <50K condizionato a occupation & education')+
-  labs(x="",y="Freq.relativa reddito <50k")+
-  geom_bar( stat="identity") +
-  facet_wrap(~occupation)+
-  theme( axis.text.x=element_blank(),
-        axis.ticks.x=element_blank())
-
-```
-
-
-Si pu? notare che il reddito percepito nelle professioni che richiedono competenze specifiche, come ad esempio "prof-especiality" o "exec-menagerial", sia  fortemente legato al grado di istruzione.
-Al contrario per quelle  che necessitano di competenze meno specifiche, come ad esempio "handers-cleaners" sembra sia quasi ininfluente.
-
-###### OccupationVSage
-
-
-Sappiamo che all'aumentare dell'et?, si registra un aumento dei livelli medi di reddito.
-Di seguito vediamo se questo ? verificato per ogni tipologia di lavoro.
-
-
-```{r , echo=FALSE, warning=FALSE,fig.width=12,fig.height=8}
-
-age_discretizzata=(discretize(clean_income$age, breaks = 5))
-clean_income=cbind(clean_income,age_discretizzata)
-tab12=prop.table(table(clean_income$salario,clean_income$age_discretizzata,clean_income$occupation,useNA = 'no'), margin=2)
-tab_transitorio=matrix(tab12,ncol = 2,byrow = T)
-freq=tab_transitorio[,1]/(tab_transitorio[,1]+tab_transitorio[,2])
-tab12=data.frame(tab12)
-tab12=tab12[-(which(tab12$Var1==' >50K')),]
-tab12$Freq=freq
-colnames(tab12)=c('salario','age_discretizzata','occupation','%')
-#a=proc.time()
-ggplot(tab12, aes(y=freq, x=age_discretizzata, fill=age_discretizzata),color=age_discretizzata) +
-  ggtitle('Distribuzione salario <50K condizionato a occupation & age_discretizzata')+
-  labs(x="",y="Freq.relativa reddito <50k")+
-  geom_bar( stat="identity") +
-  theme( axis.text.x=element_blank(),
-        axis.ticks.x=element_blank())+
-  facet_wrap(~occupation)
-
-
-```
-
-Si registrano due comportamenti molto diversi:
-per i colletti bianchi ed i venditori l'effetto ? molto evidente;
-per i colletti blu e gli impiegati, l'effetto ? pi? attenuato se non assente.
-
-L'idea ? quella che nelle prime tipologie di impiego,tipicamente pi? dinamiche, al crescere dell'et? aumentino le opportunit?,come importanti promozioni o premi di produzione.
-
-Nel secondo caso tale prospettiva ?  completamente assente oppure ? limitata, come nel caso degli "adm-clerical"
-
-
-###### OccupationVShours_per_week
-Dalle analisi precedenti, sappiamo che il livello medio di reddito aumenta al crescere delle ore di lavoro settimanali.
-Verifichiamo l'effetto nelle diverse professioni.
-
-```{r , echo=FALSE, warning=FALSE,fig.width=12,fig.height=8}
-tab12=prop.table(table(clean_income$salario,clean_income$hours_discretizzata,clean_income$occupation,useNA = 'no'), margin=2)
-tab_transitorio=matrix(tab12,ncol = 2,byrow = T)
-freq=tab_transitorio[,1]/(tab_transitorio[,1]+tab_transitorio[,2])
-tab12=data.frame(tab12)
-tab12=tab12[-(which(tab12$Var1==' >50K')),]
-tab12$Freq=freq
-colnames(tab12)=c('salario','hours_discretizzata','occupation','%')
-#a=proc.time()
-ggplot(tab12, aes(y=freq, x=hours_discretizzata, fill=hours_discretizzata),color=hours_discretizzata) +
-  ggtitle('Distribuzione salario <50K condizionato a occupation & hours_discretizzata')+
-  labs(x="",y="Freq.relativa reddito <50k")+
-  geom_bar( stat="identity") +
-  theme( axis.text.x=element_blank(),
-        axis.ticks.x=element_blank())+
-  facet_wrap(~occupation)
-
-
-```
-
-Per "prof-especiality" e "exec-menagerial", le due professioni pi? reditizzie,
- sembra che superata una certa soglia di ore settimanali, il livello del reddito non dipenda pi? dalla quant? di ore lavorate.
-
-Per "farming and fishing" , 'cleaning' e tutte le professioni meno reditizze la soglia dei 50$K annui risulta difficilmente raggiungibile anche lavorando un alto numero di ore.
-
-Per le professioni mediamente reditizie, come ad esempio "sales", la variabili risulta molto informativa.
-in quel tipo di professioni, la quantit? di tempo che vi ci si dedica, risulta essere determinante per
-determinare la soglia di reddito di un individuo.
-
-Considerando come riferimento la professione di un individuo:
-sembra che nel caso delle professioni che nell'analisi univariata risultavano pi? reditizzie e che tipicamente richiedono competenze pi? speficiche,sia importante considerare, oltre all'impiego, anche et? e titolo di studio.
-Nel caso di un individuo impiegato in un occupazione mediamente reditizia, ? utile considerare anche le ore di lavoro.
-Nelle professioni  meno reditizie e specializzate,qualsiasi altra caratteristica  socio economica dell'individuo risulta poco rilevante:la possibilit? di superare i 50k$ annui rimane comunque bassa.
-
-
-##### Sezione 2
-
-Nel corso delle analisi univariate ci siamo accorti che esisteva una certa discriminazione nei livelli del reddito tra uomini e donne, sposati e non sposati, bianchi e neri.
-Lo scopo delle seguenti analisi mira ad individuare eventuali discriminazione di reddito per genere,razza e stato coniugale per uguale occupazione ed educazione.
-
-###### OccupationVSGenere
-
-```{r , echo=FALSE, warning=FALSE,fig.width=12,fig.height=8}
-tab1=prop.table(table(clean_income$salario,clean_income$sex,clean_income$occupation,useNA = 'no'), margin=2)
-tab_transitorio=matrix(tab1,ncol = 2,byrow = T)
-freq=tab_transitorio[,1]/(tab_transitorio[,1]+tab_transitorio[,2])
-tab1=data.frame(tab1)
-tab1=tab1[-(which(tab1$Var1==' >50K')),]
-tab1$Freq=freq
-colnames(tab1)=c('salario','sex','occupation','freq')
-library(ggplot2)
-#a=proc.time()
-ggplot(tab1, aes(y=freq, x=sex, fill=sex),color=sex) +
-  ggtitle('Distribuzione salario <50K condizionato ad occupation & sex')+
-  labs(x="",y="Freq.relativa reddito <50k")+
-  geom_bar( stat="identity") +   
-  theme( axis.text.x=element_blank(),
-        axis.ticks.x=element_blank())+
-facet_wrap(~occupation)
-
-```
-
-
-A parit? di occupazione, si registra effettivamente una certa differenza nei redditi per uomini e donne, differenza che si fa pi? forte all'aumentare della redditivit? della professione.
-
-
-###### OccupationVSRelationship
-
-```{r , echo=FALSE, warning=FALSE,fig.width=12,fig.height=8}
-tab12=prop.table(table(clean_income$salario,clean_income$relationship,clean_income$occupation,useNA = 'no'), margin=2)
-tab_transitorio=matrix(tab12,ncol = 2,byrow = T)
-freq=tab_transitorio[,1]/(tab_transitorio[,1]+tab_transitorio[,2])
-tab12=data.frame(tab12)
-tab12=tab12[-(which(tab12$Var1==' >50K')),]
-tab12$Freq=freq
-colnames(tab12)=c('salario','relationship','occupation','%')
-#a=proc.time()
-ggplot(tab12, aes(y=freq, x=relationship, fill=relationship),color=relationship) +
-  ggtitle('Distribuzione salario <50K condizionato a occupation & relationship')+
-  labs(x="",y="Freq.relativa reddito <50k")+
-  geom_bar( stat="identity") +
-  theme( axis.text.x=element_blank(),
-         axis.ticks.x=element_blank())+
-  facet_wrap(~occupation)
-
-
-```
-
-
-Di nuovo vi sono differenze e nuovamente tali differenze diventano pi? evidenti nei settori pi? reditizzi.
-
-Inoltre notiamo che le differenze nei redditi tra "husband" e "wife"  rispettano le proporzioni nelle differenze tra uomini e donne.
-
-###### EducationVSsex
-
-Si nota che per i livelli pi? alti di titolo di studio conseguito, le donne raggiungono con meno frequenza la fascia di reddito superiore ai 50$k.
-
-```{r , echo=FALSE, warning=FALSE,fig.width=12,fig.height=8}
-tab1=prop.table(table(clean_income$salario,clean_income$sex,clean_income$education,useNA = 'no'), margin=2)
-tab_transitorio=matrix(tab1,ncol = 2,byrow = T)
-freq=tab_transitorio[,1]/(tab_transitorio[,1]+tab_transitorio[,2])
-tab1=data.frame(tab1)
-tab1=tab1[-(which(tab1$Var1==' >50K')),]
-tab1$Freq=freq
-colnames(tab1)=c('salario','sex','education','freq')
-library(ggplot2)
-#a=proc.time()
-ggplot(tab1, aes(y=freq, x=sex, fill=sex),color=sex) +
-  ggtitle('Distribuzione salario <50K condizionato ad education & sex')+
-  labs(x="",y="Freq.relativa reddito <50k")+
-  geom_bar( stat="identity") +   
-  theme( axis.text.x=element_blank(),
-         axis.ticks.x=element_blank())+
-  facet_wrap(~education)
-
-```
-
-
-
-###### EducationVSRelationschip
-
-Il tipo di dipendenza vista nel grafico precedente si ripropone anche in questo caso.
-Per un identico alto livello di istruzione vi ? rilevante differenza tra i redditi degli sposati e dei non sposati.
-
-
-
-```{r , echo=FALSE, warning=FALSE,fig.width=12,fig.height=8}
-tab1=prop.table(table(clean_income$salario,clean_income$relationship,clean_income$education,useNA = 'no'), margin=2)
-tab_transitorio=matrix(tab1,ncol = 2,byrow = T)
-freq=tab_transitorio[,1]/(tab_transitorio[,1]+tab_transitorio[,2])
-tab1=data.frame(tab1)
-tab1=tab1[-(which(tab1$Var1==' >50K')),]
-tab1$Freq=freq
-colnames(tab1)=c('salario','relationship','education','freq')
-library(ggplot2)
-#a=proc.time()
-ggplot(tab1, aes(y=freq, x=relationship, fill=relationship),color=relationship) +
-  ggtitle('Distribuzione salario <50K condizionato ad education & relationship')+
-  labs(x="",y="Freq.relativa reddito <50k")+
-  geom_bar( stat="identity") +   
-  theme( axis.text.x=element_blank(),
-         axis.ticks.x=element_blank())+
-  facet_wrap(~education)
-
-clean_income$hours_discretizzata=NULL
-clean_income$age_discretizzata=NULL
-
-```
-
-
-Quanto visto fonisce rilevanti indizi verso la significativit? di queste variabili e la possibilit? della presenza di una discriminazione di sesso e di un qualche tipo di discriminazione "coniugale". Pertanto queste variabili saranno inserite nei modelli.
