--- a/_posts/2020-11-10-Income.md
+++ b/_posts/2020-11-10-Income.md
@@ -3,7 +3,7 @@ title: "Machine Learning Project: Census Income Data Set"
 date: 2020-11-10
 tags: [machine learning, Neural Network, Decision Tree, Generalized Linear Model]
 header:
-  image:"/images/income/income.jpg"
+  image:"/images/income/income.JPG"
 excerpt: "Machine Learning, Decision Tree, Neural Network, GLM"
 ---
 
@@ -50,6 +50,4 @@ a=ggplot(clean_income) + aes(x=as.numeric(age), group=salario, fill=salario) +
   geom_histogram(binwidth=2,color='black')+
   scale_fill_brewer(palette = "Set1")+
   theme_replace()
-a
-#multiplot(a,b,cols = 2)
 ```
